elyra/pod.yaml
---
  apiVersion: v1
  kind: Pod
  metadata:
    name: elyra-ai
    labels:
      app: elyra-ai
  spec:
    containers:
      - name: elyra-ai
        image: romeokienzler/elyra-ai:latest
        ports:
          - containerPort: 8888
      - name: postgresql
        image: postgres
        ports:
          - containerPort: 5432
      - name: nginx
        image: nginx
        ports:
          - containerPort: 8080
