elyra/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elyra
spec:
  type: NodePort
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
      name: elyra-ai
  selector:
    app: elyra
