elyra/ingress_vhost-ibmcloud-dyn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elyra-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  
spec:
  rules:
  - host: "bfh.rkie-elyra-kubeflow-442dbba0442be6c8c50f31ed96b00601-0000.eu-de.containers.appdomain.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elyra
            port:
              number: 8888
