elyra/ingress_vhost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elyra-ingress
spec:
  rules:
  - host: "elyra.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elyra
            port:
              number: 8888
